--- a/RevStack.Commerce.Mvc/packages.config
+++ b/RevStack.Commerce.Mvc/packages.config
@@ -1,12 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net46" />
+  <package id="JonSkeet.MiscUtil" version="0.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.OData" version="5.9.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.OData.Core" version="6.15.0" targetFramework="net46" />
   <package id="Microsoft.OData.Edm" version="6.15.0" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net46" />
   <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net46" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="RevStack.Commerce" version="1.0.2" targetFramework="net46" />
+  <package id="RevStack.Configuration" version="1.0.1" targetFramework="net46" />
+  <package id="RevStack.Cryptography" version="1.0.0" targetFramework="net46" />
+  <package id="RevStack.Identity" version="1.0.2" targetFramework="net46" />
+  <package id="RevStack.Identity.Mvc" version="1.0.3" targetFramework="net46" />
+  <package id="RevStack.Mvc" version="1.0.0" targetFramework="net46" />
+  <package id="RevStack.Net" version="1.0.2" targetFramework="net46" />
+  <package id="RevStack.Notification" version="1.0.3" targetFramework="net46" />
+  <package id="RevStack.Pattern" version="1.0.0" targetFramework="net46" />
 </packages>
