--- a/RevStack.Commerce.Mvc/packages.config
+++ b/RevStack.Commerce.Mvc/packages.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net46" />
+  <package id="Elliptical.Mvc" version="1.1.0" targetFramework="net46" />
   <package id="JonSkeet.MiscUtil" version="0.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.OData" version="5.9.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
@@ -30,4 +33,5 @@
   <package id="RevStack.Net" version="1.0.2" targetFramework="net46" />
   <package id="RevStack.Notification" version="1.0.3" targetFramework="net46" />
   <package id="RevStack.Pattern" version="1.0.0" targetFramework="net46" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
